Achico tamaño de notificaciones para que no tapen datos importantes en la pantalla. Mejoro legibilidad del código para los templates de notificaciones. Agrego método de salvaguarda para obtener los datos de un comprobante cuando falla la carga por id. Arreglo bug visual en vista de detalle de comprobantes.

--- a/js/angular-notify/angular-notify.css
+++ b/js/angular-notify/angular-notify.css
@@ -2,8 +2,9 @@
 	position:fixed;
 	bottom:0px;
 	z-index: 9999;
-	max-width:400px;
+	max-width:200px;
 	text-align: left;
+	font-size: 8pt;
 
 	color: #fff;
 	/*background-color: #d9edf7;
